--- a/pom.xml
+++ b/pom.xml
@@ -5,16 +5,14 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>ru.netology</groupId>
-  <artifactId>OnlineChat2</artifactId>
+  <artifactId>WebChat</artifactId>
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
   <modules>
     <module>Client</module>
+    <module>Server</module>
   </modules>
 
-  <name>OnlineChat2</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -75,23 +73,7 @@
         </plugin>
       </plugins>
     </pluginManagement>
-      <plugins>
-          <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-compiler-plugin</artifactId>
-              <configuration>
-                  <source>8</source>
-                  <target>8</target>
-              </configuration>
-          </plugin>
-          <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-compiler-plugin</artifactId>
-              <configuration>
-                  <source>9</source>
-                  <target>9</target>
-              </configuration>
-          </plugin>
-      </plugins>
+    <plugins>
+    </plugins>
   </build>
 </project>
